Connected db and added tables

--- a/DashboardAPI/appsettings.Development.json
+++ b/DashboardAPI/appsettings.Development.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "WebApiDatabase": "Data Source=LocalDatabase.db"
+    "WebApiDatabase": "Server=tcp:dashboardapidb.database.windows.net,1433;Initial Catalog=DashboardResourceDB;Persist Security Info=False;User ID=DashboardAdmin;Password=DashboardDB555;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
