--- a/DashboardAPI/.gitignore
+++ b/DashboardAPI/.gitignore
@@ -40,6 +40,11 @@ typings
 # .NET compiled files
 bin
 obj
+*.suo
+*.user
+_Resharper*
+.vs
 
 # local sqlite db that is auto generated
 LocalDatabase.db
+
