--- a/tests/DashBoard.Business/Services.Tests/Services.Tests.csproj
+++ b/tests/DashBoard.Business/Services.Tests/Services.Tests.csproj
@@ -7,10 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\DashBoard.Business\DashBoard.Business.csproj" />
+    <ProjectReference Include="..\..\..\src\DashBoard.Data\DashBoard.Data.csproj" />
+    <ProjectReference Include="..\..\..\src\DashBoard.Web\DashBoard.Web.csproj" />
   </ItemGroup>
 
 </Project>
