--- a/Controllers.Tests/Controllers.Tests.csproj
+++ b/Controllers.Tests/Controllers.Tests.csproj
@@ -8,8 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.0" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
@@ -18,9 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Controllers.Tests\Controllers.Tests.csproj" />
-    <ProjectReference Include="..\..\..\src\DashBoard.Business\DashBoard.Business.csproj" />
-    <ProjectReference Include="..\..\..\src\DashBoard.Data\DashBoard.Data.csproj" />
+    <ProjectReference Include="..\src\DashBoard.Business\DashBoard.Business.csproj" />
+    <ProjectReference Include="..\src\DashBoard.Data\DashBoard.Data.csproj" />
+    <ProjectReference Include="..\src\DashBoard.Web\DashBoard.Web.csproj" />
   </ItemGroup>
 
 </Project>
