Migrate to Azure Web Service

--- a/src/DashBoard.Web/Properties/launchSettings.json
+++ b/src/DashBoard.Web/Properties/launchSettings.json
@@ -1,10 +1,18 @@
 {
-    "profiles": {
-        "Development": {
-            "commandName": "Project",
-            "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            }
-        }
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:50392/",
+      "sslPort": 0
     }
+  },
+  "profiles": {
+    "Development": {
+      "commandName": "IISExpress",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    }
+  }
 }
