--- a/src/DashBoard.Web/appsettings.Development.json
+++ b/src/DashBoard.Web/appsettings.Development.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "WebApiDatabase": "Server=tcp:dashboardapidb.database.windows.net,1433;Initial Catalog=DashboardResourceDB;Persist Security Info=False;User ID=DashboardAdmin;Password=DashboardDB555;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "WebApiDatabase": "Server=tcp:watchhoundapidbserver.database.windows.net,1433;Initial Catalog=watchhoundapi_db;Persist Security Info=False;User ID=DashboardAdmin;Password=DashboardDB555;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
