--- a/src/DashBoard.Web/appsettings.json
+++ b/src/DashBoard.Web/appsettings.json
@@ -3,7 +3,7 @@
     "Secret": "C6BE82D0-32E9-4559-BD60-E8FFA116D9E2"
   },
   "ConnectionStrings": {
-    "WebApiDatabase": "Server=tcp:dashboardapidb.database.windows.net,1433;Initial Catalog=DashboardResourceDB;Persist Security Info=False;User ID=DashboardAdmin;Password=DashboardDB555;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "WebApiDatabase": "Server=tcp:watchhoundapidbserver.database.windows.net,1433;Initial Catalog=watchhoundapi_db;Persist Security Info=False;User ID=DashboardAdmin;Password=DashboardDB555;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
@@ -14,3 +14,5 @@
   },
   "AllowedHosts": "*"
 }
+
+
