--- a/tests/DashBoard.Business/Services.Tests/Services.Tests.csproj
+++ b/tests/DashBoard.Business/Services.Tests/Services.Tests.csproj
@@ -18,9 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Controllers.Tests\Controllers.Tests.csproj" />
     <ProjectReference Include="..\..\..\src\DashBoard.Business\DashBoard.Business.csproj" />
-    <ProjectReference Include="..\..\..\src\DashBoard.Data\DashBoard.Data.csproj" />
+    <ProjectReference Include="..\..\..\src\DashBoard.Web\DashBoard.Web.csproj" />
   </ItemGroup>
 
 </Project>
