--- a/src/DashBoard.Business/DashBoard.Business.csproj
+++ b/src/DashBoard.Business/DashBoard.Business.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+    <PackageReference Include="SendGrid" Version="9.12.7" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
   </ItemGroup>
 
