--- a/src/DashBoard.Web/appsettings.Production.json
+++ b/src/DashBoard.Web/appsettings.Production.json
@@ -1,6 +1,7 @@
-﻿{
+{
   "AppSettings": {
     "Secret": ""
+    /*"Environment": "Production"*/
   },
   "ConnectionStrings": {
     "WebApiDatabase": ""
@@ -14,5 +15,3 @@
   },
   "AllowedHosts": "*"
 }
-
-
