--- a/src/DashBoard.Web/Properties/launchSettings.json
+++ b/src/DashBoard.Web/Properties/launchSettings.json
@@ -1,10 +1,10 @@
 {
-    "profiles": {
-        "Development": {
-            "commandName": "Project",
-            "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Development"
-            }
-        }
+  "profiles": {
+    "Development": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      }
     }
+  }
 }
